Add removeLast method